--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "livi-design-sandbox",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -13,8 +13,6 @@
     "react-dom": "17.0.2"
   },
   "license": "MIT",
-  "keywords": [
-    "next"
-  ],
-  "description": "A \"Hello World\" application with multiple pages that shows how Next.js routing works."
+  "keywords": [],
+  "description": "Sandbox for Livi Design website"
 }
