--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
+    "autoprefixer": "10.4.2",
     "next": "latest",
+    "postcss": "8.4.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "3.0.23"
