--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.2",
+    "motion": "^10.10.0",
     "next": "latest",
     "postcss": "8.4.8",
     "react": "17.0.2",
