--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "autoprefixer": "10.4.2",
-    "framer-motion": "^6.3.13",
-    "next": "latest",
-    "postcss": "8.4.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "3.1.4"
+    "autoprefixer": "10.4.7",
+    "framer-motion": "^6.5.1",
+    "next": "12.2.2",
+    "postcss": "8.4.14",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.1.6"
   },
   "license": "MIT",
   "keywords": [],
