--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "framer-motion": "^6.5.1",
     "next": "latest",
     "postcss": "8.4.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "3.1.4"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "latest"
   },
   "license": "MIT",
   "keywords": [],
